--- a/docs/about/features.mdx
+++ b/docs/about/features.mdx
@@ -2,7 +2,13 @@
 title: "Features"
 ---
 
-![](https://user-images.githubusercontent.com/78053898/198751496-22d51f03-f09f-454c-8f98-409b5dbec8f9.svg)
+<Frame>
+<img 
+    class="hero inline" 
+    alt="" 
+    src="https://user-images.githubusercontent.com/78053898/198751496-22d51f03-f09f-454c-8f98-409b5dbec8f9.svg" 
+/>
+</Frame>
 
 <CardGroup>
   <Card
@@ -32,7 +38,12 @@ title: "Features"
 👉 See more
 [details here](/design/data-pipeline-management).
 
-![](https://github.com/mage-ai/assets/blob/main/orchestration-overview.gif?raw=true)
+<Frame>
+  <img 
+      alt="" 
+      src="https://github.com/mage-ai/assets/blob/main/orchestration-overview.gif?raw=true" 
+  />
+</Frame>
 
 ## Notebook for building data pipelines
 
@@ -43,10 +54,12 @@ An interactive coding experience designed for preparing data to train ML models.
 Visualize the impact of your code every time you load, clean, and transform
 data.
 
+<Frame>
 <img
   alt="Data centric editor"
   src="https://github.com/mage-ai/assets/blob/main/data-centric-editor.png?raw=True"
 />
+</Frame>
 
 ### 2\. Production ready code
 
@@ -57,12 +70,12 @@ reused, and chained together to create an executable data pipeline locally or in
 any environment.
 
 Read more about [blocks](/design/blocks) and how they work.
-
+<Frame>
 <img
   alt="Production ready code"
   src="https://github.com/mage-ai/assets/blob/main/data-pipeline.png?raw=True"
 />
-
+</Frame>
 Run your data pipeline end-to-end using the command line function:
 `$ mage run [project] [pipeline]`
 
@@ -82,7 +95,9 @@ Adding new API endpoints ([Tornado](https://www.tornadoweb.org/en/stable/)),
 transformations (Python, PySpark, SQL), and charts (using
 [React](https://reactjs.org/)) is easy to do (tutorial coming soon).
 
+<Frame>
 <img
   alt="Extensible charts"
   src="https://github.com/mage-ai/assets/blob/main/extensible-charts.gif?raw=True"
 />
+</Frame>
