--- a/docs/about/frequently-asked-questions.mdx
+++ b/docs/about/frequently-asked-questions.mdx
@@ -4,9 +4,9 @@ sidebarTitle: "FAQ"
 icon: "question"
 description: "Here are some frequently asked questions about Mage and our best answers."
 ---
-<div align="center">
+<Frame>
 <img src="https://github.com/mage-ai/assets/blob/main/notion-faq.png?raw=True"/>
-</div>
+</Frame>
 
 <AccordionGroup>
 
