--- a/docs/api-reference/backfills/update-backfill.mdx
+++ b/docs/api-reference/backfills/update-backfill.mdx
@@ -28,7 +28,12 @@ All default attributes for a backfill may be updated in addittion to the followi
   An object containing Global Pipeline Variables to be overriden by the backfill. Any Global Variable may be overridden.
 </ParamField>
 
-![Global Pipeline Vars](https://github.com/mage-ai/assets/blob/main/pipeline-variables.png?raw=True)
+<Frame>
+  <img 
+      alt="Global Pipeline Vars" 
+      src="https://github.com/mage-ai/assets/blob/main/pipeline-variables.png?raw=True" 
+  />
+</Frame>
 
 <RequestExample>
   ```curl cURL
