--- a/docs/contributing/documentation/overview.mdx
+++ b/docs/contributing/documentation/overview.mdx
@@ -4,9 +4,9 @@ sidebarTitle: "Overview"
 description: "Like every other part of Mage, our documentation is open-source. Read on to learn how to make edits or even write entirely new docs for Mage!"
 ---
 
-<div align="center">
-<img src="https://github.com/mage-ai/mage-ai/assets/59450879/769a5faf-37ea-453c-8bd6-83270366fe00" width="65%"/>
-</div>
+<Frame>
+<img src="https://github.com/mage-ai/mage-ai/assets/59450879/769a5faf-37ea-453c-8bd6-83270366fe00"/>
+</Frame>
 
 ## Overview
 
