--- a/docs/data-integrations/sources/overview.mdx
+++ b/docs/data-integrations/sources/overview.mdx
@@ -4,11 +4,12 @@ sidebarTitle: "Overview"
 description: "A source is a system that you want to load data from and synchronize it into another system. A source can be a 3rd party API, SaaS, database, data warehouse, or a data lake."
 ---
 
+<Frame>
 <img
   alt="mage sources"
   src="https://github.com/mage-ai/assets/blob/main/mage-sources.png?raw=true"
-  width="500"
 />
+</Frame>
 
 ## Singer spec
 
