--- a/docs/dbt/overview.mdx
+++ b/docs/dbt/overview.mdx
@@ -43,7 +43,12 @@ Trigger your dbt model runs on a regular schedule, from an event, or via API req
 
 ### Run all models and optionally exclude others
 
-![](https://raw.githubusercontent.com/mage-ai/assets/main/dbt/add-dbt-models.gif)
+<Frame>
+  <img 
+      alt="" 
+      src="https://raw.githubusercontent.com/mage-ai/assets/main/dbt/add-dbt-models.gif" 
+  />
+</Frame>
 
 ### dbt models can depend on non-dbt related tasks
 
