--- a/docs/dbt/run-dbt-spark.mdx
+++ b/docs/dbt/run-dbt-spark.mdx
@@ -33,10 +33,12 @@ It should return results similar to the following when running:
 0 default
 ```
 
-<img
-  alt="PySpark Scratchpad results"
-  src="https://github.com/mage-ai/assets/blob/main/pyspark-scratchpad-results.png?raw=True"
-/>
+<Frame>
+  <img
+    alt="PySpark Scratchpad results"
+    src="https://github.com/mage-ai/assets/blob/main/pyspark-scratchpad-results.png?raw=True"
+  />
+</Frame>
 
 4. Click the `Terminal` icon on the right side of the Mage UI, and create a dbt
 project `spark_demo`, with the following commands:
@@ -90,7 +92,9 @@ from source_data
 Click the `Compile & preview` button to execute this new model, which would
 generate the results similar to the following:
 
-<img
-  alt="dbt-spark testing results"
-  src="https://github.com/mage-ai/assets/blob/main/dbt-spark-testing-results.png?raw=True"
-/>
+<Frame>
+  <img
+    alt="dbt-spark testing results"
+    src="https://github.com/mage-ai/assets/blob/main/dbt-spark-testing-results.png?raw=True"
+  />
+</Frame>
