--- a/docs/dbt/sources.mdx
+++ b/docs/dbt/sources.mdx
@@ -16,7 +16,12 @@ When you add a dbt model block to your pipeline, if it contains any `ref`s,
 those dbt models will be added to the current pipeline as upstream dependencies
 to the dbt model you initially added.
 
-![](https://github.com/mage-ai/assets/blob/main/dbt-model-refs.gif?raw=true)
+<Frame>
+  <img 
+      alt="" 
+      src="https://github.com/mage-ai/assets/blob/main/dbt-model-refs.gif?raw=true" 
+  />
+</Frame>
 
 ---
 
