--- a/docs/design/blocks/scratchpad.mdx
+++ b/docs/design/blocks/scratchpad.mdx
@@ -5,7 +5,12 @@ description: "Use these blocks to experiment and write throw away code."
 
 Scratchpad blocks aren't used when executing a pipeline.
 
-![Blocks](https://github.com/mage-ai/assets/blob/main/blocks/scratchpad.gif?raw=true)
+<Frame>
+  <img 
+      alt="Blocks" 
+      src="https://github.com/mage-ai/assets/blob/main/blocks/scratchpad.gif?raw=true" 
+  />
+</Frame>
 
 ## Getting data from other blocks
 
