--- a/docs/design/core-abstractions.mdx
+++ b/docs/design/core-abstractions.mdx
@@ -23,10 +23,12 @@ A pipeline contains references to all the blocks of code you want to run, charts
 
 Each pipeline is represented by a YAML file (here's an [example](https://github.com/mage-ai/demo%5Fetl%5Fpipeline/blob/master/pipelines/etl%5Fdemo/metadata.yaml)) in the `pipelines` folder under the Mage project directory.
 
+<Frame>
 <img
   alt="Pipeline"
   src="https://github.com/mage-ai/assets/blob/main/overview/mage-build.gif?raw=True"
 />
+</Frame>
 
 Pipelines can be filtered, tagged, and grouped by various properties. See our [docs page](/pipelines/pipeline-tagging) for more info.
 
@@ -229,10 +231,12 @@ during code execution.
 Here is an example of a log in the
 [**Data pipeline management**](/about/features) UI:
 
+<Frame>
 <img
   alt="Log detail"
   src="https://github.com/mage-ai/assets/blob/main/logs/log-detail.png?raw=true"
 />
+</Frame>
 
 Logs are stored on disk wherever Mage is running. However, you can configure
 where you want log files written to (e.g. Amazon S3, Google Storage, etc).
