--- a/docs/design/data-pipeline-management.mdx
+++ b/docs/design/data-pipeline-management.mdx
@@ -30,7 +30,12 @@ This page will show all the pipelines in your project.
 > charts for visualizing data, and organizes the dependency between each block
 > of code.
 
-![Pipelines](https://github.com/mage-ai/assets/blob/main/pipelines/pipelines-index.jpg?raw=true)
+<Frame>
+  <img 
+      alt="Pipelines" 
+      src="https://github.com/mage-ai/assets/blob/main/pipelines/pipelines-index.jpg?raw=true" 
+  />
+</Frame>
 
 Learn more about
 [**projects and pipelines here**](/design/core-abstractions#project).
@@ -66,7 +71,12 @@ View all the runs for every pipeline in your current project.
 > was completed, any runtime variables used in the execution of the pipeline or
 > block, etc.
 
-![Pipeline runs](https://github.com/mage-ai/assets/blob/main/pipelines/pipeline-runs.jpg?raw=true)
+<Frame>
+  <img 
+      alt="Pipeline runs" 
+      src="https://github.com/mage-ai/assets/blob/main/pipelines/pipeline-runs.jpg?raw=true" 
+  />
+</Frame>
 
 ---
 
@@ -95,7 +105,12 @@ This page shows all the active and inactive triggers for a single pipeline.
 > A trigger is a set of instructions that determine when or how a pipeline
 > should run.
 
-![Pipeline detail](https://github.com/mage-ai/assets/blob/main/pipelines/pipeline-detail.jpg?raw=true)
+<Frame>
+  <img 
+      alt="Pipeline detail" 
+      src="https://github.com/mage-ai/assets/blob/main/pipelines/pipeline-detail.jpg?raw=true" 
+  />
+</Frame>
 
 ---
 
@@ -128,7 +143,12 @@ occurs, or when an API is called.
 > An API trigger will instruct the pipeline to run whenever a specific API
 > is called.
 
-![Trigger create](https://github.com/mage-ai/assets/blob/main/pipelines/trigger-create.jpg?raw=true)
+<Frame>
+  <img 
+      alt="Trigger create" 
+      src="https://github.com/mage-ai/assets/blob/main/pipelines/trigger-create.jpg?raw=true" 
+  />
+</Frame>
 
 <sub>
   <i>Example page for creating a schedule type trigger.</i>
@@ -148,7 +168,12 @@ it active. Pausing the trigger will prevent it from running the pipeline.
 
 ---
 
-![Trigger detail](https://github.com/mage-ai/assets/blob/main/pipelines/trigger-detail.jpg?raw=true)
+<Frame>
+  <img 
+      alt="Trigger detail" 
+      src="https://github.com/mage-ai/assets/blob/main/pipelines/trigger-detail.jpg?raw=true" 
+  />
+</Frame>
 
 You can also edit the trigger after creating it by clicking the
 
@@ -170,7 +195,12 @@ View the pipeline runs and block runs for a pipeline.
 > was completed, any runtime variables used in the execution of the pipeline or
 > block, etc.
 
-![Pipeline detail runs](https://github.com/mage-ai/assets/blob/main/pipelines/pipeline-detail-runs.jpg?raw=true)
+<Frame>
+  <img 
+      alt="Pipeline detail runs" 
+      src="https://github.com/mage-ai/assets/blob/main/pipelines/pipeline-detail-runs.jpg?raw=true" 
+  />
+</Frame>
 
 #### Retry run
 
@@ -191,7 +221,12 @@ block type, block UUID, and more.
 >
 > A log is a file that contains system output information.
 
-![Pipeline detail logs](https://github.com/mage-ai/assets/blob/main/pipelines/pipeline-detail-logs.jpg?raw=true)
+<Frame>
+  <img 
+      alt="Pipeline detail logs" 
+      src="https://github.com/mage-ai/assets/blob/main/pipelines/pipeline-detail-logs.jpg?raw=true" 
+  />
+</Frame>
 
 ---
 
@@ -206,10 +241,12 @@ _WIP_
 You can monitor many metrics for each of your pipelines and blocks. Soon, you’ll
 be able to monitor aggregate metrics across all pipelines and blocks.
 
+<Frame>
 <img
   alt="Monitoring"
   src="https://github.com/mage-ai/assets/blob/main/monitoring.jpg?raw=true"
 />
+</Frame>
 
 Read more [here](/development/observability/monitoring).
 
