--- a/docs/development/dependencies/custom-files.mdx
+++ b/docs/development/dependencies/custom-files.mdx
@@ -4,13 +4,13 @@ sidebarTitle: "Custom files"
 description: "You can import any Python code from any file that is in your Mage project directory."
 ---
 
-<p align='center'>
+<Frame>
 <img
   alt="Python mecha"
   src="https://github.com/mage-ai/assets/blob/main/development/python-2.png?raw=true"
   width="250"
-></img>
-</p>
+/>
+</Frame>
 
 ## Importing custom Python code
 
