--- a/docs/development/dependencies/requirements.mdx
+++ b/docs/development/dependencies/requirements.mdx
@@ -3,13 +3,14 @@ title: "Install Python packages"
 sidebarTitle: "Requirements.txt"
 description: "Use 3rd party Python packages in your project and pipelines."
 ---
-<p align='center'>
+
+<Frame>
 <img
   alt="Python mecha"
   src="https://github.com/mage-ai/assets/blob/main/development/python-package.png?raw=true"
   width="250"
-></img>
-</p>
+/>
+</Frame>
 
 ## Add Python packages to `requirements.txt`
 
