--- a/docs/development/git/configure.mdx
+++ b/docs/development/git/configure.mdx
@@ -3,13 +3,13 @@ title: "Configure Git"
 description: "This page will walk you through the process of authenticating with SSH or HTTPS and configuring Git for use with Mage Git Sync."
 ---
 
-If you're wondering which Git resource to use in Mage, see [this](docs/getting-started/setting-up-git) page for a high-level overview of Git functionality. If you'd like to use Mage's GitHub integration (recommended for GitHub users), there's a different method of configuration. See [this](/production/data-sync/github) page for more information.
+If you're wondering which Git resource to use in Mage, see [this](/getting-started/setting-up-git) page for a high-level overview of Git functionality. If you'd like to use Mage's GitHub integration (recommended for GitHub users), there's a different method of configuration. See [this](/production/data-sync/github) page for more information.
 
 If you've decided on a method that uses HTTPS or SSH authentication (Git Sync or Git Integration), this page will walk you through configuring one of those methods.
 
-<div align="center">
+<Frame>
 <img src="https://user-images.githubusercontent.com/78053898/198753409-c7c41a8d-c137-4273-bb3b-76ecc81f8ee2.png"/>
-</div>
+</Frame>
 
 ## Configure Git settings
 
