--- a/docs/development/observability/monitoring.mdx
+++ b/docs/development/observability/monitoring.mdx
@@ -8,10 +8,12 @@ description:
 Soon, you'll be able to monitor aggregate metrics across all pipelines and
 blocks.
 
+<Frame>
 <img
   alt="Monitoring"
   src="https://github.com/mage-ai/assets/blob/main/monitoring.jpg?raw=true"
 />
+</Frame>
 
 ## Metrics
 
