--- a/docs/development/testing/great-expectations.mdx
+++ b/docs/development/testing/great-expectations.mdx
@@ -3,7 +3,12 @@ title: "Great Expectations"
 description: "Test the data produced by pipeline blocks using Great Expectations."
 ---
 
-![Great Expectations](https://images.ctfassets.net/ycwst8v1r2x5/22OiZltRmxCktJkYGUR2Su/c6da39d7884a9ec2d8b2d451cd81db6c/GX_Dark_BG_2x.png)
+<Frame>
+  <img 
+      alt="Great Expectations" 
+      src="https://images.ctfassets.net/ycwst8v1r2x5/22OiZltRmxCktJkYGUR2Su/c6da39d7884a9ec2d8b2d451cd81db6c/GX_Dark_BG_2x.png" 
+  />
+</Frame>
 
 ## Setup
 
@@ -30,7 +35,12 @@ They must be Python blocks (SQL block support coming soon).
 
 1. [Add Great Expectations power up to your pipeline](/design/blocks/extension#how-to-add-extensions-to-your-pipeline).
 1. In the list of available power ups, click the option for <b>Great Expectations</b>.
-    ![Power ups](https://github.com/mage-ai/assets/blob/main/notebook/extensions/power-ups.jpg?raw=true)
+<Frame>
+  <img 
+      alt="Power ups" 
+      src="https://github.com/mage-ai/assets/blob/main/notebook/extensions/power-ups.jpg?raw=true" 
+  />
+</Frame>
 
 ---
 
@@ -64,7 +74,12 @@ If it appears, fill in `test number of rows` as the name and click the button la
 1. After you save, a button that is labeled after the name of the block you just selected will appear.
 For example, if your block is named `load_api_data_demo`,
 then a button labeled <b>load_api_data_demo</b> will appear.
-    ![Great Expectations extension block](https://github.com/mage-ai/assets/blob/main/notebook/extensions/great-expectation-extension-block.jpeg?raw=true)
+  <Frame>
+    <img 
+        alt="Great Expectations extension block" 
+        src="https://github.com/mage-ai/assets/blob/main/notebook/extensions/great-expectation-extension-block.jpeg?raw=true" 
+    />
+  </Frame>
 1. Click that button to run your extension block for the block `load_api_data_demo`.
 1. The output should look something like this:
     ```
