--- a/docs/getting-started/file-versions.mdx
+++ b/docs/getting-started/file-versions.mdx
@@ -42,7 +42,12 @@ For more information, please read the [project setup guide](/development/project
 1. Near the top on the right side, click the button <b>Show versions</b>.
 1. A list of previous versions for that file will appear in the right side panel.
 
-![File versions](https://github.com/mage-ai/assets/blob/main/notebook/file-versions.jpg?raw=true)
+<Frame>
+  <img 
+      alt="File versions" 
+      src="https://github.com/mage-ai/assets/blob/main/notebook/file-versions.jpg?raw=true" 
+  />
+</Frame>
 
 ## How to restore to a previous version
 
