--- a/docs/getting-started/setting-up-git.mdx
+++ b/docs/getting-started/setting-up-git.mdx
@@ -4,9 +4,9 @@ sidebarTitle: "Get started with Git"
 description: "There are a number of ways to enable version control, collaboration, and easy deployment using Git in Mage. We'll cover them all on this page."
 ---
 
-<div align="center">
+<Frame>
 <img src="https://github.com/mage-ai/assets/blob/main/getting-started/adventure-time.gif?raw=True" width="75%"/>
-</div>
+</Frame>
 
 ## Choose your adventure
 
