--- a/docs/guides/ai/overview.mdx
+++ b/docs/guides/ai/overview.mdx
@@ -6,12 +6,10 @@ icon: "microchip-ai"
 ---
 
 <Frame>
-    <p align="center">
     <img
         alt="Using artificial intelligence"
         src="https://steamuserimages-a.akamaihd.net/ugc/813376249149384255/EC3222795DC2961599F7FC0B69E0241C8EC7293E/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false"
     />
-    </p>
 </Frame>
 
 ## Setup
@@ -37,10 +35,12 @@ For example:
 then clean the column names,
 and finally export the dataframe to PostgreSQL.*
 
+<Frame>
 <img
     alt="Generate pipeline using AI"
     src="https://github.com/mage-ai/assets/blob/main/guides/ai/generate-pipeline.png?raw=true"
 />
+</Frame>
 
 ## Generate block using AI
 
@@ -54,17 +54,21 @@ In the autocomplete dropdown list, select the 1st option with a label starting w
 
 <b>Generate block using AI: ...</b>
 
+<Frame>
 <img
     alt="Generate block using AI"
     src="https://github.com/mage-ai/assets/blob/main/guides/ai/generate-block.png?raw=true"
 />
+</Frame>
 
 ## Document code using AI
 
+<Frame>
 <img
     alt="Add documentation using AI"
     src="https://github.com/mage-ai/assets/blob/main/guides/ai/document.png?raw=true"
 />
+</Frame>
 
 ### Add documentation for a block
 
