--- a/docs/guides/blocks/sql-blocks.mdx
+++ b/docs/guides/blocks/sql-blocks.mdx
@@ -2,12 +2,12 @@
 title: "SQL blocks"
 description: "Execute SQL commands directly in your database, data warehouse, etc."
 ---
-
+<Frame>
 <img
   alt="SQL blocks"
   src="https://github.com/mage-ai/assets/blob/main/development/mage-block.png?raw=true"
-  width="300"
 />
+</Frame>
 
 ## Credentials
 
@@ -78,15 +78,6 @@ In addition to the fields mentioned in the table above. Here are some extra fiel
 | --------------------- | ------------------------ | --------------------------------------------------------------------------------|
 | limit                 | No                       | The maximum number of rows to return in notebook.                               |
 | limit_in_pipeline_run | No                       | The maximum number of rows to return when running the block in the pipeline run.|
----
-
-<img
-  alt="SQL block monsters"
-  src="https://github.com/mage-ai/assets/blob/main/development/sql-block-monsters.png?raw=true"
-  width="500"
-/>
-
----
 
 ## Automatically created tables
 
