--- a/docs/guides/load-api-data.mdx
+++ b/docs/guides/load-api-data.mdx
@@ -200,10 +200,12 @@ transformed it, and exported it to a database.
 
 Now you're ready to raid the dungeons and find magical treasures with your new powers!
 
+<Frame>
 <img
     alt="Lightning mage"
     src="https://raw.githubusercontent.com/mage-ai/assets/af9fafa41d823fe8e710d54f86164bef4378f5c3/mascots/earth/casting.svg"
 />
+</Frame>
 
 If you have more questions or ideas, get real-time help in our live support
 [Slack channel](https://www.mage.ai/chat).
