--- a/docs/guides/streaming-pipeline-rabbitmq.mdx
+++ b/docs/guides/streaming-pipeline-rabbitmq.mdx
@@ -4,10 +4,12 @@ description:
   "Build pipelines that ingest data from event streaming sources like RabbitMQ."
 ---
 
+<Frame>
 <img
   alt="Streaming pipeline"
   src="https://i.gifer.com/4Ze9.gif"
 />
+</Frame>
 
 ## Set up RabbitMQ
 
