--- a/docs/guides/streaming-pipeline.mdx
+++ b/docs/guides/streaming-pipeline.mdx
@@ -3,11 +3,12 @@ title: "Kafka streaming pipeline"
 description:
   "Build pipelines that ingest data from event streaming sources like Kafka."
 ---
-
+<Frame>
 <img
   alt="Streaming pipeline"
   src="https://c.tenor.com/sezVCSw-n7sAAAAC/waterfall-stream.gif"
 />
+</Frame>
 
 <br />
 
