--- a/docs/guides/streaming/magic-devcontainer.mdx
+++ b/docs/guides/streaming/magic-devcontainer.mdx
@@ -19,9 +19,9 @@ Then, it creates a batch pipeline to:
 
 Read more or make updates to the repo [here](https://github.com/mage-ai/magic-devcontainer/tree/main).
 
-<p align="center">
+<Frame>
 <img src="https://github.com/mage-ai/magic-devcontainer/blob/main/assets/img/taxi-gif.gif?raw=True"></img>
-</p>
+</Frame>
 
 ## 🛠️ Configuration
 
@@ -43,9 +43,9 @@ Let's get started 🎉
 
 ## 🙋‍♂️ Wait, what's happening?
 
-<p align="center">
+<Frame>
 <img src="https://github.com/mage-ai/magic-devcontainer/blob/main/assets/magic-devcontainer.png?raw=True" width="60%"></img>
-</p>
+</Frame>
 
 By performing the above, VSCode is creating an isolated environment, installing a few extensions + building and running Docker as defined in `docker-compose.yaml`.
 
@@ -66,9 +66,9 @@ Data will begin streaming 30 seconds after the container starts.
 3. Double check the config— these should pull from your `.env` file.
 4. Click `Execute pipeline` in the bottom right to run your stream. You should see data flowing!
 
-<p align="center">
+<Frame>
 <img src="https://github.com/mage-ai/magic-devcontainer/blob/main/assets/img/mage-gif.gif?raw=True" width="60%"></img>
-</p>
+</Frame>
 
 Nice! We've got a working stream. You can click `Cancel pipeline` after some sample data has been loaded or let the stream run.
 
