--- a/docs/integrations/databases/BigQuery.mdx
+++ b/docs/integrations/databases/BigQuery.mdx
@@ -1,12 +1,13 @@
 ---
 title: "BigQuery"
 ---
-
+<Frame>
 <img
   alt=""
   src="https://www.vectorlogo.zone/logos/google_bigquery/google_bigquery-ar21.svg"
-  height="200"
+  width="300px"
 />
+</Frame>
 
 ## Add credentials
 
