--- a/docs/integrations/databases/ClickHouse.mdx
+++ b/docs/integrations/databases/ClickHouse.mdx
@@ -1,12 +1,12 @@
 ---
 title: "ClickHouse"
 ---
-
+<Frame>
 <img
   alt="ClickHouse — open source distributed column-oriented DBMS"
   src="https://clickhouse.com/images/ch_gh_logo_rounded.png"
-  height="200"
 />
+</Frame>
 
 ## Add credentials
 
