--- a/docs/integrations/databases/GoogleSheets.mdx
+++ b/docs/integrations/databases/GoogleSheets.mdx
@@ -2,13 +2,12 @@
 title: "Google Sheets"
 description: "Mage supports writing/reading from Google Sheets using the Google Sheets API via the gspread library. Read on to learn about reading/writing data to Sheets."
 ---
-<div align="center">
+<Frame>
 <img
   alt=""
   src="https://github.com/mage-ai/mage-ai/assets/59450879/0a10316e-1b0d-4727-858f-c743cc1e296c"
-  width="55%"
 />
-</div>
+</Frame>
 
 ## Configuration
 
