--- a/docs/integrations/databases/MicrosoftSQLServer.mdx
+++ b/docs/integrations/databases/MicrosoftSQLServer.mdx
@@ -2,7 +2,12 @@
 title: "Microsoft SQL Server"
 ---
 
-![](https://www.commvault.com/wp-content/uploads/2019/08/sql-server_logo.jpg)
+<Frame>
+  <img 
+      alt="" 
+      src="https://www.commvault.com/wp-content/uploads/2019/08/sql-server_logo.jpg" 
+  />
+</Frame>
 
 ## Add credentials
 
