--- a/docs/integrations/databases/MongoDB.mdx
+++ b/docs/integrations/databases/MongoDB.mdx
@@ -2,7 +2,12 @@
 title: "MongoDB"
 ---
 
-![](https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/MongoDB_Logo.svg/2560px-MongoDB_Logo.svg.png)
+<Frame>
+  <img 
+      alt="" 
+      src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/MongoDB_Logo.svg/2560px-MongoDB_Logo.svg.png" 
+  />
+</Frame>
 
 ## Add credentials
 
