--- a/docs/integrations/databases/MySQL.mdx
+++ b/docs/integrations/databases/MySQL.mdx
@@ -2,7 +2,12 @@
 title: "MySQL"
 ---
 
-![](https://user-images.githubusercontent.com/78053898/198753513-4a149790-853a-4dcd-8c93-388f84ef6aeb.png)
+<Frame>
+  <img 
+      alt="" 
+      src="https://user-images.githubusercontent.com/78053898/198753513-4a149790-853a-4dcd-8c93-388f84ef6aeb.png" 
+  />
+</Frame>
 
 ## Add credentials
 
