--- a/docs/integrations/databases/Pinot.mdx
+++ b/docs/integrations/databases/Pinot.mdx
@@ -2,7 +2,12 @@
 title: "Pinot"
 ---
 
-![](https://pinot.apache.org/img/pinot-navbar-logo-722f37.svg)
+<Frame>
+  <img 
+      alt="" 
+      src="https://pinot.apache.org/img/pinot-navbar-logo-722f37.svg" 
+  />
+</Frame>
 
 ## Add credentials
 
