--- a/docs/integrations/databases/PostgreSQL.mdx
+++ b/docs/integrations/databases/PostgreSQL.mdx
@@ -2,7 +2,12 @@
 title: "PostgreSQL"
 ---
 
-![](https://user-images.githubusercontent.com/78053898/198754399-3b594af0-cf84-41d3-8faf-e1f6e4c5182d.png)
+<Frame>
+  <img 
+      alt="" 
+      src="https://user-images.githubusercontent.com/78053898/198754399-3b594af0-cf84-41d3-8faf-e1f6e4c5182d.png" 
+  />
+</Frame>
 
 ## Add credentials
 
