--- a/docs/integrations/databases/Redshift.mdx
+++ b/docs/integrations/databases/Redshift.mdx
@@ -2,7 +2,12 @@
 title: "Redshift"
 ---
 
-![](https://user-images.githubusercontent.com/78053898/198754422-f3800160-b36a-4e3c-af78-cf322e55a7d3.png)
+<Frame>
+  <img 
+      alt="" 
+      src="https://user-images.githubusercontent.com/78053898/198754422-f3800160-b36a-4e3c-af78-cf322e55a7d3.png" 
+  />
+</Frame>
 
 ## Add credentials
 
