--- a/docs/integrations/databases/S3.mdx
+++ b/docs/integrations/databases/S3.mdx
@@ -2,7 +2,12 @@
 title: "S3"
 ---
 
-![](https://user-images.githubusercontent.com/78053898/198754439-87922b6d-e8ed-4b6c-852c-96a1d3545612.png)
+<Frame>
+  <img 
+      alt="" 
+      src="https://user-images.githubusercontent.com/78053898/198754439-87922b6d-e8ed-4b6c-852c-96a1d3545612.png" 
+  />
+</Frame>
 
 ## Add credentials
 
