--- a/docs/integrations/databases/trino.mdx
+++ b/docs/integrations/databases/trino.mdx
@@ -4,10 +4,12 @@ sidebarTitle: "Trino"
 description: "Execute SQL commands in Trino."
 ---
 
+<Frame>
 <img
   alt="Trino"
   src="https://dbdb.io/media/logos/trino.png"
 />
+</Frame>
 
 ## Credentials
 
