--- a/docs/integrations/observability/alerting-opsgenie.mdx
+++ b/docs/integrations/observability/alerting-opsgenie.mdx
@@ -4,11 +4,13 @@ sidebarTitle: "Opsgenie"
 description: "Get status updates in Opsgenie."
 ---
 
-<img
-  alt="Opsgenie"
-  src="https://logotyp.us/files/opsgenie.svg"
-  width="300"
-/>
+<Frame>
+  <img
+    alt="Opsgenie"
+    src="https://logotyp.us/files/opsgenie.svg"
+    width="300px"
+  />
+</Frame>
 
 ## Overview of steps
 
@@ -85,6 +87,9 @@ created.
 
 Here is an example of what the alert could look like:
 
-|                                                                                                        |
-|--------------------------------------------------------------------------------------------------------|
-| ![Opsgenie](https://github.com/mage-ai/assets/blob/main/opsgenie-alert-example.jpeg?raw=True)                                                        |
+<Frame>
+  <img 
+      alt="Opsgenie" 
+      src="https://github.com/mage-ai/assets/blob/main/opsgenie-alert-example.jpeg?raw=True" 
+  />
+</Frame>
