--- a/docs/integrations/observability/alerting-teams.mdx
+++ b/docs/integrations/observability/alerting-teams.mdx
@@ -4,11 +4,13 @@ sidebarTitle: "Teams"
 description: "Get status updates in your Teams channel."
 ---
 
+<Frame>
 <img
   alt="Teams"
   src="https://img.icons8.com/color-glass/512/microsoft-teams.png"
   width="300"
 />
+</Frame>
 
 ## Overview of steps
 
@@ -82,6 +84,9 @@ appear in the channel you configured the webhook URL for.
 
 Here is an example of what that message could look like:
 
-|                                                                                                        |
-| ------------------------------------------------------------------------------------------------------ |
-| ![Teams](https://github.com/mage-ai/assets/blob/main/third-party/teams-message-run-alert.jpg?raw=true) |
+<Frame>
+  <img 
+      alt="Teams" 
+      src="https://github.com/mage-ai/assets/blob/main/third-party/teams-message-run-alert.jpg?raw=true" 
+  />
+</Frame>
