--- a/docs/integrations/observability/metaplane.mdx
+++ b/docs/integrations/observability/metaplane.mdx
@@ -4,7 +4,12 @@ sidebarTitle: "Metaplane"
 description: "Run monitors in Metaplane."
 ---
 
-![Metaplane](https://assets.website-files.com/6010c8c1dcb1d8def7311218/62fba80fddc9a0e808d2cff0_metaplane_full_filled_dark_purple.svg)
+<Frame>
+  <img 
+      alt="Metaplane" 
+      src="https://assets.website-files.com/6010c8c1dcb1d8def7311218/62fba80fddc9a0e808d2cff0_metaplane_full_filled_dark_purple.svg" 
+  />
+</Frame>
 
 ## Configuration
 
