--- a/docs/integrations/polars.mdx
+++ b/docs/integrations/polars.mdx
@@ -30,4 +30,9 @@ def load_data(*args, **kwargs):
     return df
 ```
 
-![Untitled](https://media.graphassets.com/FBfwDhuzSnyc2O3pLyMS)
+<Frame>
+  <img 
+      alt="Untitled" 
+      src="https://media.graphassets.com/FBfwDhuzSnyc2O3pLyMS" 
+  />
+</Frame>
