--- a/docs/integrations/spark-pyspark.mdx
+++ b/docs/integrations/spark-pyspark.mdx
@@ -9,7 +9,12 @@ description:
 Want to become a
 [Sparkmage](https://c1.scryfall.com/file/scryfall-cards/large/front/0/3/030f4058-54e5-4333-bd6c-2789c334bf12.jpg)?
 
-![](https://user-images.githubusercontent.com/78053898/199308674-afd8860e-09de-4003-a7ed-9ab2db221b0c.png)
+<Frame>
+  <img 
+      alt="" 
+      src="https://user-images.githubusercontent.com/78053898/199308674-afd8860e-09de-4003-a7ed-9ab2db221b0c.png" 
+  />
+</Frame>
 
 ## Kubernetes
 
