--- a/docs/integrations/strongdm.mdx
+++ b/docs/integrations/strongdm.mdx
@@ -2,7 +2,12 @@
 title: "StrongDM"
 ---
 
-![StrongDM](https://www.strongdm.com/docs/images/logos/strongdm.svg)
+<Frame>
+  <img 
+      alt="StrongDM" 
+      src="https://www.strongdm.com/docs/images/logos/strongdm.svg" 
+  />
+</Frame>
 
 
 ## Setup Docker enviroment
