--- a/docs/orchestration/triggers/events/aws.mdx
+++ b/docs/orchestration/triggers/events/aws.mdx
@@ -31,7 +31,12 @@ The following steps will walk you through how to create an event rule for SQS.
 1. Check the status box labeled `Enabled`.
 1. In the bottom right corner, click the button labeled <b>Create rule</b>.
 
-![](https://github.com/mage-ai/assets/blob/main/guides/triggers/events/create-event.png?raw=true)
+<Frame>
+  <img 
+      alt="" 
+      src="https://github.com/mage-ai/assets/blob/main/guides/triggers/events/create-event.png?raw=true" 
+  />
+</Frame>
 
 ## Add AWS credentials to environment variables
 
@@ -106,7 +111,12 @@ to create a trigger.
 you created in the previous steps; e.g. `events_from_my_sqs_queue`.
 1. At the top left corner, click the button <b>Save changes</b>.
 
-![](https://github.com/mage-ai/assets/blob/main/guides/triggers/events/create-trigger.png?raw=true)
+<Frame>
+  <img 
+      alt="" 
+      src="https://github.com/mage-ai/assets/blob/main/guides/triggers/events/create-trigger.png?raw=true" 
+  />
+</Frame>
 
 ## Test pipeline trigger
 
