--- a/docs/production/authentication/overview.mdx
+++ b/docs/production/authentication/overview.mdx
@@ -4,7 +4,12 @@ sidebarTitle: "Overview"
 description: "Create users, manage users, and require sign in to authenticate and use Mage."
 ---
 
-![Gandalf](https://media.tenor.com/bIJa2uRURiQAAAAC/lord-of-the-rings-you-shall-not-pass.gif)
+<Frame>
+  <img 
+      alt="Gandalf" 
+      src="https://media.tenor.com/bIJa2uRURiQAAAAC/lord-of-the-rings-you-shall-not-pass.gif" 
+  />
+</Frame>
 
 ---
 
@@ -86,7 +91,12 @@ Here are the default credentials for the owner user to sign in with:
 Before using Mage, users will have to sign in at `/sign-in`. If you go to a page that requires
 authentication and you’re not signed in, you’ll be redirected to the sign in page.
 
-![Sign in page](https://raw.githubusercontent.com/mage-ai/assets/main/users/sign-in.jpg)
+<Frame>
+  <img 
+      alt="Sign in page" 
+      src="https://raw.githubusercontent.com/mage-ai/assets/main/users/sign-in.jpg" 
+  />
+</Frame>
 
 ## User management page
 
@@ -100,7 +110,12 @@ On this page, you can:
 1. Reset user passwords
 1. Delete users
 
-![Sign in page](https://raw.githubusercontent.com/mage-ai/assets/main/users/users-list.jpg)
+<Frame>
+  <img 
+      alt="Sign in page" 
+      src="https://raw.githubusercontent.com/mage-ai/assets/main/users/users-list.jpg" 
+  />
+</Frame>
 
 ## Roles and permissions
 
