--- a/docs/production/ci-cd/local-cloud/buildkite.mdx
+++ b/docs/production/ci-cd/local-cloud/buildkite.mdx
@@ -3,7 +3,12 @@ title: "Buildkite"
 description: "CI/CD with Buildkite."
 ---
 
-![Buildkite](https://www.vectorlogo.zone/logos/buildkite/buildkite-ar21.png)
+<Frame>
+  <img 
+      alt="Buildkite" 
+      src="https://www.vectorlogo.zone/logos/buildkite/buildkite-ar21.png" 
+  />
+</Frame>
 
 ## Mage project setup
 
