--- a/docs/production/data-sync/git-integration.mdx
+++ b/docs/production/data-sync/git-integration.mdx
@@ -22,29 +22,36 @@ Once the modal is open, you can start performing actions. Currently, the Git int
         Create new branch will create a new branch in your local git directory. Specify the name of the branch and click `Create`. You will
         automatically be switched to the new branch.
 
+        <Frame>
         <img src="https://github.com/mage-ai/assets/blob/main/version-control/git-integration/create-new-branch.png?raw=true" width="100%"/>
+        </Frame>
     </Accordion>
     <Accordion title="Switch branch">
         To switch your local branch, you can click the dropdown menu with the current active branch and select the branch you would like to switch to.
 
+        <Frame>
         <img src="https://github.com/mage-ai/assets/blob/main/version-control/git-integration/switch-branch.png?raw=true" width="100%"/>
+        </Frame>
     </Accordion>
     <Accordion title="Commit & push">
         <Steps>
             <Step title="Select files">
                 First, select the files you would like to commit. You can select all files by clicking the `Include all changes` button.
-
+                <Frame>
                 <img src="https://github.com/mage-ai/assets/blob/main/version-control/git-integration/select-files.png?raw=true" width="100%"/>
+                </Frame>
             </Step>
             <Step title="Commit your changes">
                 Then, enter a descriptive commit message and click `Commit`. This will commit your changes to your local git directory.
-
+                <Frame>
                 <img src="https://github.com/mage-ai/assets/blob/main/version-control/git-integration/commit-changes.png?raw=true" width="100%"/>
+                </Frame>
             </Step>
             <Step title="Push to remote">
                 Once your changes are commited, you can push your commit to the remote repository by clicking `Push`.
-
+                <Frame>
                 <img src="https://github.com/mage-ai/assets/blob/main/version-control/git-integration/push-to-remote.png?raw=true" width="100%"/>
+                </Frame>
             </Step>
         </Steps>
     </Accordion>
