--- a/docs/production/deploying-to-cloud/architecture.mdx
+++ b/docs/production/deploying-to-cloud/architecture.mdx
@@ -5,7 +5,12 @@ icon: "sitemap"
 
 Here is an overview of Mage architecture:
 
-![Mage architecture](https://github.com/mage-ai/assets/blob/main/mage-architecture.png?raw=True)
+<Frame>
+  <img 
+      alt="Mage architecture" 
+      src="https://github.com/mage-ai/assets/blob/main/mage-architecture.png?raw=True" 
+  />
+</Frame>
 
 
 ## Mage server
