--- a/docs/production/deploying-to-cloud/gcp/setup.mdx
+++ b/docs/production/deploying-to-cloud/gcp/setup.mdx
@@ -3,7 +3,12 @@ title: "Deploy to GCP with Terraform"
 sidebarTitle: "Setup"
 ---
 
-![](https://user-images.githubusercontent.com/78053898/198754786-3c4618dd-d648-4af7-b288-5ff18371335b.png)
+<Frame>
+  <img 
+      alt="" 
+      src="https://user-images.githubusercontent.com/78053898/198754786-3c4618dd-d648-4af7-b288-5ff18371335b.png" 
+  />
+</Frame>
 
 ## Pre-requisites
 
