--- a/docs/production/deploying-to-cloud/using-terraform.mdx
+++ b/docs/production/deploying-to-cloud/using-terraform.mdx
@@ -3,7 +3,12 @@ title: "Terraform"
 icon: "hammer"
 ---
 
-![](https://user-images.githubusercontent.com/78053898/198754720-d6b1e5bd-caa8-431e-a4cb-e26743c0ef36.png)
+<Frame>
+  <img 
+      alt="" 
+      src="https://user-images.githubusercontent.com/78053898/198754720-d6b1e5bd-caa8-431e-a4cb-e26743c0ef36.png" 
+  />
+</Frame>
 
 Deploy Mage to your cloud provider using Terraform.
 
