--- a/docs/production/developing-in-the-cloud/cloud-dev-environments/overview.mdx
+++ b/docs/production/developing-in-the-cloud/cloud-dev-environments/overview.mdx
@@ -25,5 +25,6 @@ If you run into issues deploying your infrastructure, feel free to reach out in 
 [Slack](https://www.mage.ai/chat).
 
 Your team can use [Git for version control](/getting-started/setting-up-git) in the cloud.
-
+<Frame>
 <img src="https://github.com/mage-ai/assets/blob/main/multi-dev-cloud-env.jpg?raw=true" />
+</Frame>
