--- a/docs/streaming/overview.mdx
+++ b/docs/streaming/overview.mdx
@@ -15,7 +15,12 @@ Check out this [tutorial](/guides/streaming-pipeline#create-a-new-pipeline) to s
 
 You can build a streaming pipeline with one source, multiple transformers, and multiple sinks. Here is an example streaming
 pipeline:
-![Complex streaming pipeline](https://media.graphassets.com/4ZWHyLpgTESu0rB1sXnP)
+<Frame>
+  <img 
+      alt="Complex streaming pipeline" 
+      src="https://media.graphassets.com/4ZWHyLpgTESu0rB1sXnP" 
+  />
+</Frame>
 
 ## Supported sources
 - [Amazon SQS](/streaming/sources/amazon-sqs)
