--- a/docs/streaming/sources/google-cloud-pubsub.mdx
+++ b/docs/streaming/sources/google-cloud-pubsub.mdx
@@ -78,7 +78,12 @@ the Google Cloud PubSub service locally through an emulator (see more details at
     print_msg: true
     ```
 
-![Image of the testing pipeline for "Google Cloud PubSub Source"](./google_cloud_pubsub_source.png)
+<Frame>
+  <img 
+      alt="Image of the testing pipeline for 'Google Cloud PubSub Source'" 
+      src="./google_cloud_pubsub_source.png" 
+  />
+</Frame>
 ---
 
 ## Test pipeline
