--- a/docs/contributing/development-environment.mdx
+++ b/docs/contributing/development-environment.mdx
@@ -79,4 +79,6 @@ You can check the `mage_ai/frontend/scripts/install_and_run.sh` file in VSCode t
 it is using CRLFs (carriage return line feeds), and if it is, change it to LFs (line feeds)
 and save the file. Then try running the `docker-compose` command again.
 
+<Frame>
 <img src="https://github.com/mage-ai/assets/blob/main/development/windows/update-crlf-to-lf-vscode.gif?raw=True"/>
+</Frame>
