--- a/docs/dbt/run-single-model.mdx
+++ b/docs/dbt/run-single-model.mdx
@@ -11,7 +11,12 @@ sidebarTitle: "Run a model"
    profile (e.g. `dev`) that you want to use when running the selected dbt
    models.
 
-![](https://github.com/mage-ai/assets/blob/main/dbt/add-dbt-model.gif?raw=true)
+<Frame>
+  <img 
+      alt="" 
+      src="https://github.com/mage-ai/assets/blob/main/dbt/add-dbt-model.gif?raw=true" 
+  />
+</Frame>
 
 ---
 
@@ -39,7 +44,12 @@ dbt project’s
 [connection profile](https://docs.getdbt.com/docs/get-started/connection-profiles)
 target.
 
-![](https://github.com/mage-ai/assets/blob/main/dbt/dbt-preview.gif?raw=true)
+<Frame>
+  <img 
+      alt="" 
+      src="https://github.com/mage-ai/assets/blob/main/dbt/dbt-preview.gif?raw=true" 
+  />
+</Frame>
 
 ---
 
