--- a/docs/dbt/variable-interpolation.mdx
+++ b/docs/dbt/variable-interpolation.mdx
@@ -51,7 +51,12 @@ jaffle_shop:
 
 ### dbt targets
 
-![dbt target](https://github.com/mage-ai/assets/blob/main/connection-profiles/dbt-target.png?raw=True)
+<Frame>
+  <img 
+      alt="dbt target" 
+      src="https://github.com/mage-ai/assets/blob/main/connection-profiles/dbt-target.png?raw=True" 
+  />
+</Frame>
 
 Here, we've used a manually entered target to specify a postgres database dependent on the environment `postgres_{{ env_var('ENV') }}`.
 
