--- a/docs/design/blocks/callbacks.mdx
+++ b/docs/design/blocks/callbacks.mdx
@@ -156,7 +156,12 @@ data integration pipelines:
 2. In the top right of the block, click the triple dot icon which should open up a menu
 with more options. Click "Add callback".
 3. You should now see another code editor under the main editor for your block.
-![Block callback](https://github.com/mage-ai/assets/blob/main/block-callback.png?raw=True)
+<Frame>
+  <img 
+      alt="Block callback" 
+      src="https://github.com/mage-ai/assets/blob/main/block-callback.png?raw=True" 
+  />
+</Frame>
 4. You can add an `on_success` callback and/or a `on_failure` callback. These callbacks
 will run after your block run completes or fails. When you run your block in the
 pipeline edit page, it will also run the callback depending on the status of the block.
