--- a/docs/design/blocks/extension.mdx
+++ b/docs/design/blocks/extension.mdx
@@ -48,7 +48,12 @@ the pipeline will finish.
 1. Edit the pipeline.
 1. On the right side of the page, click the <b>Power ups</b> icon in the navigation.
 If you don’t see it, try expanding the right area of the page.
-    ![Power ups](https://github.com/mage-ai/assets/blob/main/notebook/extensions/power-ups.jpg?raw=true)
+<Frame>
+  <img 
+      alt="Power ups" 
+      src="https://github.com/mage-ai/assets/blob/main/notebook/extensions/power-ups.jpg?raw=true" 
+  />
+</Frame>
 1. You’ll be shown a list of power ups you can add to your pipeline.
 1. Click on a power up to configure it and add extension blocks to your pipeline.
 
