--- a/docs/design/blocks/sensor.mdx
+++ b/docs/design/blocks/sensor.mdx
@@ -3,11 +3,12 @@ title: "Sensor"
 description: "A sensor is a block that continuously evaluates a condition until it’s met or until a period of time has elapsed."
 ---
 
+<Frame>
 <img
   alt="Python mecha"
   src="https://github.com/mage-ai/assets/blob/main/blocks/grandwizard_a_big_mythical_spirit_like_eye_scanning_a_bunch_of__b030824d-801c-4f8d-a9bd-51f0681eaa78.png?raw=true"
-  width="300"
 />
+</Frame>
 
 In your pipeline, you can add sensors that run continuously and only complete
 when an external pipeline or external block is successfully ran for a particular
