--- a/docs/development/variables/secrets.mdx
+++ b/docs/development/variables/secrets.mdx
@@ -22,7 +22,12 @@ To manage your secrets, you'll want to go to the edit page for a pipeline. In th
 you should see a `Secrets` tab. To create a secret, press the `New` button on this tab.
 Input a name for the secret and the value of the secret, and press Enter or Return to save.
 
-![Create Secrets](https://github.com/mage-ai/assets/blob/main/create-secrets.png?raw=True)
+<Frame>
+  <img 
+      alt="Create Secrets" 
+      src="https://github.com/mage-ai/assets/blob/main/create-secrets.png?raw=True" 
+  />
+</Frame>
 
 The secrets can be shared across the project that they are created in.
 
@@ -83,7 +88,12 @@ You can use the following syntax to have Mage interpolate the secret when readin
 field_name: "{{ mage_secret_var('your_secret_name') }}"
 ```
 
-![Using Secrets](https://github.com/mage-ai/assets/blob/main/using-secrets.png?raw=True)
+<Frame>
+  <img 
+      alt="Using Secrets" 
+      src="https://github.com/mage-ai/assets/blob/main/using-secrets.png?raw=True" 
+  />
+</Frame>
 
 You can also fetch the secret value in a Mage code block by importing a helper method:
 
