--- a/docs/getting-started/kernels.mdx
+++ b/docs/getting-started/kernels.mdx
@@ -81,4 +81,9 @@ the UI.
 If you're switching back to the Python3 kernel, you may need to undo the
 configuration changes needed for the other kernel types.
 
-![](https://github.com/mage-ai/assets/blob/main/switch_kernels.png?raw=True)
+<Frame>
+  <img 
+      alt="" 
+      src="https://github.com/mage-ai/assets/blob/main/switch_kernels.png?raw=True" 
+  />
+</Frame>
