--- a/docs/getting-started/runtime-variable.mdx
+++ b/docs/getting-started/runtime-variable.mdx
@@ -52,14 +52,24 @@ value, and press Enter to save.
 To edit global variables, hover over the variable and click on the edit button.
 You can edit the variable name and/or value, and press Enter to save.
 
-![Create Global Variables](https://github.com/mage-ai/assets/blob/main/configure-runtime-variables.png?raw=True)
+<Frame>
+  <img 
+      alt="Create Global Variables" 
+      src="https://github.com/mage-ai/assets/blob/main/configure-runtime-variables.png?raw=True" 
+  />
+</Frame>
 
 ### In code
 
 You can also create or edit global variables in code by editing the pipeline
 `metadata.yaml` file.
 
-![Create Global Variables in Code](https://github.com/mage-ai/assets/blob/main/configure-variables-in-code.png?raw=True)
+<Frame>
+  <img 
+      alt="Create Global Variables in Code" 
+      src="https://github.com/mage-ai/assets/blob/main/configure-variables-in-code.png?raw=True" 
+  />
+</Frame>
 
 ### In Python code
 You can also save the variable in Python code. One example usage is to save checkpoint data. 
