--- a/docs/guides/integrate-mage-airflow.mdx
+++ b/docs/guides/integrate-mage-airflow.mdx
@@ -7,10 +7,12 @@ description:
   data pipeline; all from the Mage UI."
 ---
 
+<Frame>
 <img
   alt="wind"
   src="https://www.penccil.com/files/U_95_240356858903_wt5.gif"
 />
+</Frame>
 
 <Note>
   This tutorial requires that you already have Airflow setup and running
@@ -150,6 +152,9 @@ a new pipeline, add 1 data loader block, and add 1 transformer block.
 6. Watch the DAG as it runs each task according to the pipeline you created in
    Mage.
 
+<Frame>
 <img alt="Mage in Airflow" src="https://github.com/mage-ai/assets/blob/main/mage-airflow.jpg?raw=True" />
+</Frame>
+
 </Step>
 </Steps>
