--- a/docs/guides/overview.mdx
+++ b/docs/guides/overview.mdx
@@ -4,9 +4,10 @@ icon: "fly"
 sidebarTitle: "Overview"
 description: "Mage guides for getting started, building pipelines, and more."
 ---
-<p align='center'>
+
+<Frame>
 <img src="https://github.com/mage-ai/mage-ai/assets/59450879/7ef1cc84-0b15-4e6c-aa5c-74fdba7c2d5f"/>
-</p>
+</Frame>
 
 This section of our documentation contains helpful guides and tutorials to getting started with Mage.  
 
