--- a/docs/integrations/databases/Druid.mdx
+++ b/docs/integrations/databases/Druid.mdx
@@ -2,7 +2,12 @@
 title: "Druid"
 ---
 
-![](https://druid.apache.org/img/druid_nav.png)
+<Frame>
+  <img 
+      alt="" 
+      src="https://druid.apache.org/img/druid_nav.png" 
+  />
+</Frame>
 
 ## Add credentials
 
