--- a/docs/integrations/databases/DuckDB.mdx
+++ b/docs/integrations/databases/DuckDB.mdx
@@ -4,7 +4,12 @@ sidebarTitle: "DuckDB"
 description: "Execute SQL commands in DuckDB."
 ---
 
-![](https://miro.medium.com/v2/resize:fit:1400/format:webp/0*Qcgc4cmJk5lFGBwi.png)
+<Frame>
+  <img 
+      alt="" 
+      src="https://miro.medium.com/v2/resize:fit:1400/format:webp/0*Qcgc4cmJk5lFGBwi.png" 
+  />
+</Frame>
 
 ## Credentials
 
