--- a/docs/integrations/databases/Snowflake.mdx
+++ b/docs/integrations/databases/Snowflake.mdx
@@ -2,7 +2,12 @@
 title: "Snowflake"
 ---
 
-![](https://user-images.githubusercontent.com/78053898/198754469-d3c289d7-65c7-44d0-818c-a7a15b393d4c.png)
+<Frame>
+  <img 
+      alt="" 
+      src="https://user-images.githubusercontent.com/78053898/198754469-d3c289d7-65c7-44d0-818c-a7a15b393d4c.png" 
+  />
+</Frame>
 
 ## Add credentials
 
