--- a/docs/integrations/observability/alerting-slack.mdx
+++ b/docs/integrations/observability/alerting-slack.mdx
@@ -3,27 +3,24 @@ title: "Alerting status updates in Slack"
 sidebarTitle: "Slack"
 description: "Get status updates in your Slack channel."
 ---
-
+<Frame>
 <img
   alt="Slack"
   src="https://d34u8crftukxnk.cloudfront.net/slackpress/prod/sites/6/2019-01_BrandRefresh_Old-to-New-Final.gif"
   width="300"
 />
+</Frame>
 
 ## Overview of steps
 
 1. Set up webhooks for Slack
 2. Update Mage project settings
 
----
-
 ## Set up webhooks for Slack
 
 Follow these
 [instructions on Slack](https://api.slack.com/messaging/webhooks)
 to setup incoming webhooks for your workspace.
-
----
 
 ## Update Mage project settings
 
@@ -106,8 +103,6 @@ Hare are the supported variables: `error`, `execution_time`, `pipeline_run_url`,
 For `pipeline_run_url`, the default host is `http://localhost:6789`. You can specify `MAGE_PUBLIC_HOST` to be
 the host url you want to use in the notification messages.
 
----
-
 ## What next?
 
 Whenever a pipeline run is successfully completed or fails, a Slack message will
@@ -115,6 +110,9 @@ appear in the channel you configured the webhook URL for.
 
 Here is an example of what that message could look like:
 
-|                                                                                                        |
-| ------------------------------------------------------------------------------------------------------ |
-| ![Slack](https://github.com/mage-ai/assets/blob/main/third-party/slack-message-run-alert.jpg?raw=true) |
+<Frame>
+  <img 
+      alt="Slack" 
+      src="https://github.com/mage-ai/assets/blob/main/third-party/slack-message-run-alert.jpg?raw=true" 
+  />
+</Frame>
