--- a/docs/integrations/observability/great-expectations.mdx
+++ b/docs/integrations/observability/great-expectations.mdx
@@ -2,7 +2,12 @@
 title: "Great Expectations"
 ---
 
-![Great Expectations](https://images.ctfassets.net/ycwst8v1r2x5/22OiZltRmxCktJkYGUR2Su/c6da39d7884a9ec2d8b2d451cd81db6c/GX_Dark_BG_2x.png)
+<Frame>
+  <img 
+      alt="Great Expectations" 
+      src="https://images.ctfassets.net/ycwst8v1r2x5/22OiZltRmxCktJkYGUR2Su/c6da39d7884a9ec2d8b2d451cd81db6c/GX_Dark_BG_2x.png" 
+  />
+</Frame>
 
 <Card
   title="Great Expectations"
