--- a/docs/introduction/overview.mdx
+++ b/docs/introduction/overview.mdx
@@ -40,9 +40,9 @@ We put the _fun_ in fun-ctional programming. Mage is a hybrid framework that com
     - **Engineering best practices built-in**: Every step in your pipeline is a standalone file with modular code that's reusable and testable. No more DAGs with spaghetti code 🍝.
     - **Bring your favorite tools:** Write [dbt](/dbt/overview) models, use your favorite [IDE](/development/text-editor), [track changes with Git](/getting-started/setting-up-git), and much much more.
 
-    <p align="center">
+    <Frame>
       <img src="https://github.com/mage-ai/assets/blob/main/overview/mage-build.gif?raw=True"/>
-    </p>
+    </Frame>
   </Step>
   <Step title="🔍 Preview">
   Don't waste time waiting for your DAGs to finish testing. Get instant feedback from your code _every_ time you run it.
@@ -51,9 +51,9 @@ We put the _fun_ in fun-ctional programming. Mage is a hybrid framework that com
   - **Data is a first-class citizen**: Each block of code in your pipeline produces data that can be versioned, partitioned, and cataloged for future use.
   - **Collaborate on cloud**: Develop collaboratively on [cloud resources](/production/deploying-to-cloud/architecture), version control with [Git](/getting-started/setting-up-git), and [test](/development/data-validation) pipelines without waiting for an available shared staging environment.
 
-  <p align="center">
+  <Frame>
     <img src="https://github.com/mage-ai/assets/blob/main/overview/mage-preview.gif?raw=True"/>
-  </p>
+  </Frame>
 </Step>
 <Step title="🚀 Launch" >
   Don't have a large team dedicated to Airflow? Mage makes it easy for a single developer or small team to scale up and manage thousands of pipelines.
@@ -62,9 +62,9 @@ We put the _fun_ in fun-ctional programming. Mage is a hybrid framework that com
   - **Scaling made simple**: Transform very large datasets directly in your data warehouse or through a native integration with [Spark](/integrations/spark-pyspark).
   - **Observability**: Operationalize your pipelines with built-in monitoring, alerting, and observability through an intuitive UI.
 
-  <p align="center">
+  <Frame>
     <img src="https://github.com/mage-ai/assets/blob/main/overview/observability.gif?raw=True"/>
-  </p>
+  </Frame>
 </Step>
 </Steps>
 
@@ -116,14 +116,14 @@ Together, we're Magers!
 > A group of mages who help each other realize their full potential! Join us on [Slack](https://www.mage.ai/chat).
 
 ✨ This documentation & project are brought to you by the following _magical_ individuals (learn more about contributing [here](/contributing/overview)):
-<p align="center">
+<Frame>
   <a href="https://github.com/mage-ai/mage-ai/graphs/contributors">
     <img src="https://contrib.rocks/image?repo=mage-ai/mage-ai&columns=10" />
   </a>
-</p>
+</Frame>
 
 ## 🪪 [License](https://github.com/mage-ai/mage-ai/blob/master/LICENSE)
 
-<p align="center">
+<Frame>
 <img src="https://github.com/mage-ai/assets/blob/main/mascots/mascots-shorter.jpeg?raw=true" noZoom />
-</p>
+</Frame>
