--- a/docs/production/deploying-to-cloud/azure/setup.mdx
+++ b/docs/production/deploying-to-cloud/azure/setup.mdx
@@ -3,14 +3,24 @@ title: "Deploy to Azure with Terraform"
 sidebarTitle: "Setup"
 ---
 
-![](https://user-images.githubusercontent.com/78053898/198754758-13aed127-73cd-4582-8556-f4f7f84012f9.png)
+<Frame>
+  <img 
+      alt="" 
+      src="https://user-images.githubusercontent.com/78053898/198754758-13aed127-73cd-4582-8556-f4f7f84012f9.png" 
+  />
+</Frame>
 
 ## Overview
 
 Here is a high level diagram of how Mage interacts with various Azure resources deployed using
 this Terraform template.
 
-![Mage Azure architecture](https://github.com/mage-ai/assets/blob/main/production/deployment/azure/architecture.png?raw=true)
+<Frame>
+  <img 
+      alt="Mage Azure architecture" 
+      src="https://github.com/mage-ai/assets/blob/main/production/deployment/azure/architecture.png?raw=true" 
+  />
+</Frame>
 
 ## Pre-requisites
 
