--- a/docs/production/deploying-to-cloud/using-helm.mdx
+++ b/docs/production/deploying-to-cloud/using-helm.mdx
@@ -3,7 +3,12 @@ title: "Helm"
 icon: "anchor"
 ---
 
-![](https://avatars.githubusercontent.com/u/15859888?s=200&v=4)
+<Frame>
+  <img 
+      alt="" 
+      src="https://avatars.githubusercontent.com/u/15859888?s=200&v=4" 
+  />
+</Frame>
 
 Deploy Mage to Kubernetes cluster with Helm.
 
